# SnakeAI

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.cfg  windows_installer.bat
SnakeAI_installer/: windows_installer.bat
src/snake_ai/: IO.py  __init__.py  class_factory_abc.py  data.py  factory_abc.py  function_factory_abc.py  main.py  mediator.py
src/snake_ai/genetic/: fitness_functions.py  genetic_algorithm.py  genetic_functions.py
src/snake_ai/gui/: _data.py  abc_button.py  abc_panel.py  abc_win.py  game_config_win.py  main_menu_win.py  mediator.py  panels.py  start_win.py  stats_win.py  training_config_win.py  training_win.py
src/snake_ai/neural/: nn.py  nn_functions.py  nn_graphics.py
src/snake_ai/snake/: enums.py
src/snake_ai/snake/game_displayer/: game_displayer_abc.py  game_model_displayer.py  game_vsai_displayer.py
src/snake_ai/snake/game_process/: snake_abc_process.py  snake_ai_abc_process.py  snake_ai_gui_process.py  snake_ai_nogui_process.py  snake_ai_process.py  snake_batch_process.py  snake_gui_process.py  snake_human_process.py
src/snake_ai/snake/resources/default_controller/: binary_15_15_15_spa.nn  binary_40_sbx.nn  binary_40_spa.nn  binary_6_spa.nn  default_binary.nn  default_controller.nn  default_real.nn
src/snake_ai/snake/snake_controller/: __init__.py  auto_controller.py  controller_abc.py  human_controller.py
src/snake_ai/snake/snake_core/: __init__.py  _data.py  snake_core.py
src/snake_ai/snake/snake_core/snake_gui_core/: __init__.py  snake_gui_abc.py  snake_gui_factory.py  snake_hw_gui.py  snake_lw_gui.py
src/snake_ai/snake/vision/: __init__.py  dist_abc.py  dist_concr.py  dist_factory.py  grid_ops.py
src/snake_ai/trainer/: stats.py  worker.py
