[metadata]
name = snakeAI
version = 0.0.1
author = Alvaro Torralba
author_email = alvarouk230@gmail.com
description = This package provides with all the necessary elements the run the SnakeAi application
classifiers =
    Programming Language :: Python :: 3


[options]
python_requires = >=3.11.3
install_requires =
    numpy
    pygame
    pillow
    matplotlib
    customtkinter

packages = find_namespace:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
snake_ai.snake.resources.default_controller =
    *
snake_ai.snake.resources.fonts =
    *
snake_ai.snake.resources.images.ext_gui =
    *
snake_ai.snake.resources.images.lw_gui =
    *
snake_ai.snake.resources.images.shared =
    *
snake_ai.gui.resources =
    *