[metadata]
name = snakeAI
version = 0.0.1
author = Alvaro Torralba
author_email = 
url = https://github.com/laguneroo/SnakeAI
description = This package provides with all the necessary elements the run the SnakeAI application
classifiers =
    Programming Language :: Python :: 3.11
    Operating System :: Microsoft :: Windows
    Natural Language :: English
license = MIT

[bdist_wheel]
universal = 0
python-tag = cp311
plat-name = win_amd64

[options]
python_requires = >=3.11
install_requires =
    numpy>=1.25.1
    pygame>=2.5.0
    pillow>=10.0.0
    matplotlib>=3.7.2
    customtkinter>=5.2.0

packages = find_namespace:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
snake_ai.snake.resources.default_controller =
    *
snake_ai.snake.resources.fonts =
    *
snake_ai.snake.resources.images.ext_gui =
    *
snake_ai.snake.resources.images.lw_gui =
    *
snake_ai.snake.resources.images.shared =
    *
snake_ai.gui.resources =
    *
